@@ -19,12 +19,16 @@
 package de.tobiasbielefeld.searchbar.helper;
 
 import android.content.res.Resources;
+import android.content.SharedPreferences;
 import android.view.View;
 import android.widget.ImageView;
 import android.widget.LinearLayout;
 import android.widget.TextView;
 
 import java.util.ArrayList;
+import java.util.LinkedList;
+import java.util.List;
+import java.util.Collections;
 
 import de.tobiasbielefeld.searchbar.R;
 import de.tobiasbielefeld.searchbar.SharedData;
@@ -43,14 +47,32 @@ public class Records implements View.OnClickListener, View.OnLongClickListener{
     private MainActivity main;
     private Resources res;
 
-    private ArrayList<LinearLayout> linearLayouts = new ArrayList<>();
-    private ArrayList<String> recordList = new ArrayList<>();
+    private List<LinearLayout> linearLayouts;
+    private LinkedList<String> recordList;
     private int MAX_NUMBER_OF_RECORDS;
 
     public Records(MainActivity mainActivity){
         main = mainActivity;
         res = main.getResources();
         MAX_NUMBER_OF_RECORDS = res.getInteger(R.integer.max_number_records);
+        
+        // populate linearLayouts with layouts from XML resource
+        linearLayouts = new ArrayList<>(MAX_NUMBER_OF_RECORDS);
+        for (int i = 0; i < MAX_NUMBER_OF_RECORDS; i++) {
+            int id = res.getIdentifier("record_" + i, "id", main.getPackageName());
+            LinearLayout layout=(LinearLayout) main.findViewById(id);
+            TextView textView = (TextView) layout.getChildAt(0);
+
+            layout.setVisibility(View.GONE);
+            
+            textView.setOnClickListener(this);
+            textView.setOnLongClickListener(this);
+            layout.getChildAt(1).setOnClickListener(this);
+
+            linearLayouts.add(layout);
+        }
+        
+        recordList = new LinkedList<>();
     }
 
     /**
@@ -59,13 +81,10 @@ public class Records implements View.OnClickListener, View.OnLongClickListener{
      */
     public void load() {
 
-        linearLayouts.clear();
         recordList.clear();
 
-        for (int i = 0; i < MAX_NUMBER_OF_RECORDS; i++) {
-            int id = res.getIdentifier("record_" + i, "id", main.getPackageName());
-            linearLayouts.add((LinearLayout) main.findViewById(id));
-            linearLayouts.get(i).setVisibility(View.GONE);
+        for (LinearLayout layout : linearLayouts) {
+            layout.setVisibility(View.GONE);
         }
 
         //if records are disabled, stop here, so everything gets hidden if so
@@ -75,12 +94,14 @@ public class Records implements View.OnClickListener, View.OnLongClickListener{
         int recordListLength = getSavedInt(PREF_RECORD_LIST_SIZE, 0);
 
         for (int i = 0; i < recordListLength; i++) {
-            recordList.add(getSavedString(PREF_RECORD_ENTRY + i, ""));
-            linearLayouts.get(i).setVisibility(View.VISIBLE);
-            ((TextView) linearLayouts.get(i).getChildAt(0)).setText(recordList.get(i));
-            linearLayouts.get(i).getChildAt(0).setOnClickListener(this);
-            linearLayouts.get(i).getChildAt(0).setOnLongClickListener(this);
-            linearLayouts.get(i).getChildAt(1).setOnClickListener(this);
+            // Get elements for current iteration
+            String text = getSavedString(PREF_RECORD_ENTRY + i, ""); 
+            LinearLayout layout = linearLayouts.get(i);
+            
+            // Crosslink elements
+            recordList.add(text);
+            ((TextView) layout.getChildAt(0)).setText(text);
+            layout.setVisibility(View.VISIBLE);
         }
     }
 
@@ -94,10 +115,13 @@ public class Records implements View.OnClickListener, View.OnLongClickListener{
         if (!recordsEnabled())
             return;
 
-        recordList.add(0, newString);
+        // Prevent redundant entries from filling history
+        recordList.removeAll(Collections.singleton(newString));
 
-        if (recordList.size() > MAX_NUMBER_OF_RECORDS) {
-            recordList.remove(recordList.size() - 1);
+        recordList.addFirst(newString);
+
+        while (recordList.size() > MAX_NUMBER_OF_RECORDS) {
+            recordList.removeLast();
         }
 
         save();
@@ -107,11 +131,18 @@ public class Records implements View.OnClickListener, View.OnLongClickListener{
      * Saves the record list to the sharedPref
      */
     private void save() {
-        for (int i = 0; i < recordList.size(); i++) {
-            putSavedString(PREF_RECORD_ENTRY + i, recordList.get(i));
+        // Start edit session for preferences to prevent inconsistancies in stored data.
+        SharedPreferences.Editor editSession = SharedData.sharedPref.edit();
+        
+        int i=0;
+        for (String text : recordList) {
+            editSession.putString(PREF_RECORD_ENTRY + i, text);
+            i++;
         }
 
-        putSavedInt(PREF_RECORD_LIST_SIZE, recordList.size());
+        editSession.putInt(PREF_RECORD_LIST_SIZE, i);
+        
+        editSession.apply();
     }
 
     /**
@@ -120,7 +151,7 @@ public class Records implements View.OnClickListener, View.OnLongClickListener{
      * @param text The record to delete
      */
     public void delete(String text){
-        recordList.remove(text);
+        recordList.removeAll(Collections.singleton(text));
         save();
         load();
     }
@@ -182,7 +213,7 @@ public class Records implements View.OnClickListener, View.OnLongClickListener{
         String text = ((TextView) v).getText().toString();
 
         main.setSearchText(text);
-        main.startSearch(text);
+        main.startSearch();
     }
 
     /**
